[package]
name = "union_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
urlencoding = "2.1.3"
reqwest = "0.12.22"
